--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ build/
 .vscode/
 
 ### Mac OS ###
-.DS_Store### Example user template template
+.DS_Store
 ### Example user template
 
 # IntelliJ project files
